--- a/font and text styling.css
+++ b/font and text styling.css
@@ -5,6 +5,8 @@ h1
     font-weight:200;
     text-decoration: underline wavy yellow;
     letter-spacing:10px;
+    font-size: 60px;
+    font-family:fantasy;
 }
 
 p{
@@ -12,6 +14,7 @@ p{
     text-align: right;
     text-decoration: underline dotted red;
     line-height:2;
+    font-family:cursive
 }
 
 h2{
@@ -19,6 +22,8 @@ h2{
     letter-spacing: 10px;
     color: maroon;
     text-decoration: underline wavy yellow;
+    font-size: 60px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
@@ -31,4 +36,7 @@ h3{
     letter-spacing: 10px;
     color:olive;
     text-decoration: line-through dotted red;
+    font-size: 60px;
+    font-family: serif;
+
 }
