--- a/box_model_styling.css
+++ b/box_model_styling.css
@@ -10,6 +10,9 @@ h1{
     background-color:rgb(179, 46, 46);
     width: 500px;
     border-radius: 20%;
+    padding-left: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .one{
@@ -32,6 +35,7 @@ h1{
     border-left-color:yellow;
     border-style:dotted solid none;
     border-radius: 50%;
+    padding: 40px 20px;
     
 }
 
@@ -60,4 +64,24 @@ h1{
     border:darkcyan 5px solid ;
     border-top-left-radius: 50px;
     border-bottom-right-radius: 50px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+button{
+    color:wheat;
+    background-color: crimson;
+    padding: 20px;
+    border-radius: 90%;
+    transform:translate(150%,50%);
+}
+
+.six{
+    padding: 20px;
+    height: 100px;
+    border-radius: 40%;
+}
+
+.seven{
+    margin:30px;
 }
