--- a/position_styling.css
+++ b/position_styling.css
@@ -1,15 +1,45 @@
-#static #first{
-    background-color: greenyellow;
+div{
+    background-color: rgb(12, 3, 51);
+    border-color: black;
     width:200px;
     height: 200px;
     margin-bottom: 20px;
-    display: inline;
+    display: inline-block;
 }
 
-#static #third{
-    background-color: greenyellow;
-    width: 200px;
-    height:200px;
-    display: inline-block;
+#middle{
+    background-color:rgb(39, 86, 146);
+}
 
+#static #middle{
+  
+    position:static;
+    top:100px;
+}
+
+#relative #middle{
+    
+    position:relative;
+    top:50px;
+    right:-50px;
+
+}
+
+#absolute #middle{
+    position:absolute;
+    bottom:50px;
+    left:30px;
+}
+
+#fixed #middle
+{
+    position:fixed;
+    top:20px;
+    left:20px;
+}
+
+#sticky #middle{
+    position:-webkit-sticky;
+    top:10px;
+    right:10px;
 }
