--- a/transition_styling.css
+++ b/transition_styling.css
@@ -2,4 +2,45 @@
     width:500px;
     height:500px;
     background-color:crimson;
+    transition :background-color 3s 1s;
+}
+
+.circle:hover{
+    background-color: rgb(179, 230, 41);
+    border-radius: 50%;
+
+}
+
+section div {
+    width: 100px;
+    height:100px;
+    background-color: rgb(248, 245, 73);
+    margin: 20px 0;
+    transition: margin-left 3s;
+}
+
+section:hover div{
+    margin-left: 500px;
+    background-color: blue;
+}
+
+div:nth-of-type(1)
+{
+    transition-timing-function: ease-in;
+
+}
+
+div:nth-of-type(2)
+{
+    transition-timing-function: ease-out;
+}
+
+div:nth-of-type(3)
+{
+    transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
+}
+
+div:nth-of-type(4)
+{
+    transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
 }
