--- a/flexbox_styling.css
+++ b/flexbox_styling.css
@@ -1,20 +1,23 @@
 body {
     font-family: 'Zen Tokyo Zoo', cursive;
 }
-h1 {
+h1,h2 {
     text-align: center;
+    font-size: 50px;
 }
 #container {
     display:flex;
     flex-direction:row;
     justify-content:center;
-    flex-wrap: wrap;
+    /*flex-wrap: wrap;*/
     background-color: #003049;
     width: 90%;
-    height: 500px;
+    height: 200px;
     margin: 0 auto;
     border: 5px solid #003049;
     align-items:flex-start;
+    /*min-width: 100px;
+    max-width: 300px;*/;
     /*align-content:flex-start;*/
     
 }
@@ -23,6 +26,7 @@ h1 {
     width:200px;
     height:200px;
     text-align: center;
+    flex-basis: 600px;
 }
 
 div:nth-of-type(3)
@@ -40,5 +44,44 @@ div:nth-of-type(4)
 div:nth-of-type(2)
 {
     align-self:center;
+    flex-shrink:2;
+}
+
+
+div:nth-of-type(5)
+{
+    flex-grow: 1;
+}
+
+
+
+div:nth-of-type(1)
+{
+    flex-grow: 1;
+}
+
+
+main{
+    width:80%;
+    margin: 0 auto;
+    border:5px solid black;
+    display:flex;
+    height:500px;
+    display:flex;
+}
+
+
+main .sidebar
+{
+    background-color: coral;
+    flex:1 2 300px;
+    border: 5px solid white;
+}
+
+main .mainContent
+{
+    background-color: crimson;
+    flex:2 1 800px;
+    
 }
 
