--- a/pricing_panel/pricing_panel_styling.css
+++ b/pricing_panel/pricing_panel_styling.css
@@ -19,7 +19,7 @@ body{
    padding: 15px 25px;
    border-radius: 10px;
    display:flex;
-   flex-direction: column;
+   flex-direction:column;
    text-align: center;
    text-transform: uppercase;
 }
@@ -79,4 +79,55 @@ body{
     display: block;
     font-size: 32px;
     font-weight: 700;
+}
+
+
+.pricing-button
+{
+    border:1px solid #9dd1ff;
+    text-decoration: none;
+    padding:15px 35px;
+    border-radius: 10px;
+    margin:25px 0;
+    color:348efe;
+    display:inline-block;
+    transition:background-color 200ms ease-in-out;
+}
+
+
+.pricing-button:hover,.pricing-button:focus
+
+{
+    background-color: #e1f1ff;
+}
+
+.pricing-button.is-featured
+{
+    background-color:#48aaff;
+    color:white;
+}
+
+
+
+.pricing-button.is-featured:hover,.pricing-button.is-featured:focus
+{
+    background-color:#269aff;
+}
+
+
+@media(min-width:900px)
+{
+    .panel{
+        flex-direction: row;
+    }
+
+    .pricing-plan{
+        border-bottom: none;
+        border-right:1px solid #e1f1ff;
+        padding:25px 50px;
+    }
+    .pricing-plan:last-child
+    {
+        border-right: none;
+    }
 }
